--- a/Front-end code/CSS/index.css
+++ b/Front-end code/CSS/index.css
@@ -3,6 +3,7 @@
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
+	background: url(images/textures/w3.png) repeat left top;
 	}
 	
 body > .container-fluid {
@@ -12,51 +13,83 @@ body > .container-fluid {
 .bg-grey {
 	background-color: #2d2d30;
 	color: #efefef;
+	background: url(../images/textures/grey.png) repeat left top;
+	//box-shadow:0 1px 2px 2px rgba(0,0,0,1),0 -1px 2px 2px rgba(0,0,0,1);
    }
-   
+    
 .bg-white {
-   color: #818181;
+   color: #696969;
    }
    
 .bg-white h1 {
-     color: #666;	 
+     color: #616161;	 
    }
   
 .navbar {
-    font-family: Montserrat, sans-serif;
+    font-family: Arial, sans-serif;
     margin-bottom: 0;  
-	background-color: #333333;
+	background-color: rgba(255,255,255,0.97);
     z-index: 9999;
     border: 0;   
     border-radius: 0;
-	letter-spacing: 1px;
-	box-shadow: 0 4px 5px #111111; 
+	border-bottom:1px solid rgba(0,0,0,0.2);
+	//box-shadow: 0 1px 2px #111111; 
+	//background: url(../images/textures/lightGreyScratches.png) repeat left top;
 	}
+
+/***Centering the content of the navbar***/
+.navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: top;
+    }
+
+.navbar .navbar-collapse {
+        text-align: center;
+    }
+/*************************************/
 	
-.navbar-nav li a, .navbar .navbar-brand {
-    color: #eee !important;
+.navbar-nav li a {
+    color: #444 !important;
+	font-size:12px;
+	font-weight: 800;
     }
 	
-.navbar-nav li a:hover {
-	color: #000 !important;
-    background-color: #fff !important;
-	border-radius: 1px;
-	}
-  
+.navbar-brand {
+	color: #444 !important;
+	font-size:20px;
+}
 
+.navbar .navbar-header .navbar-toggle {
+	background-color:#444;
+}
+
+.navbar  .navbar-toggle .icon-bar{
+	background-color:white;
+}
+	
+.navbar-nav li a:hover, .navbar-brand:hover{
+	color: #2763a1 !important;
+}
+
+.nav-capitalize {
+	font-size:13px;	
+}
+	
 .intro-header {
     padding-top: 50px; /* Make sure there is 50px of padding so the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../images/vilnius.jpg) no-repeat center center;
+    background: url(../images/misc/vilnius.jpg) no-repeat center center;
     background-size: cover;
+	/*box-shadow:0 5px 5px #222,0 -5px 5px #222;*/
 }
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 15%;
+    padding-bottom: 12%;
 }
 
 .intro-message > h1 {
@@ -101,6 +134,11 @@ padding-left:35px;
 	padding-right:10%;
 	font-size:17px;
 	line-height:1.3em;
+}
+
+#facilitiesSection > .container > .row {
+	background-color: rgba(0,0,0,0.35);
+	box-shadow:0 0 20px black inset;
 }
 
 .facilitiesImg {
@@ -169,12 +207,12 @@ padding-left:35px;
 
 #contactSection .fa:not(.fa-facebook):not(.fa-envelope) {
 	color:#ff4d4d;
-	font-size:22px;
+	font-size:25px;
 }	
 
 #contactSection .fa-envelope {
     color:#ff4d4d;
-	font-size:19px;
+	font-size:22px;
 }	
 
 .facebook-button {
@@ -262,6 +300,26 @@ footer {
 	
     visibility: visible; 
 }
+
+.upAndDown {
+    animation-name: moving;
+    -webkit-animation-name: moving; 
+    -moz-animation-name: moving; 
+    -o-animation-name: moving; 
+	
+    animation-duration: 1s; 
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    -o-animation-duration: 1s;
+	
+	animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+	-moz-animation-iteration-count: infinite;
+	-o-animation-iteration-count: infinite;
+	
+	cursor:pointer; 
+}
+
 
 @keyframes slideIn {
     0% {
@@ -351,7 +409,80 @@ footer {
     }
 }
 
+@keyframes moving {
+    0% {
+    
+        transform: translateY(0%);
+    } 
+	
+	50% {
+		transform: translateY(-20%);
+	}
+	
+	
+    100% {
+        
+        transform: translateY(0%);
+    } 
+}
+
+@-webkit-keyframes moving {
+    0% {
+    
+        -webkit-transform: translateY(0%);
+    } 
+	
+	50% {
+		-webkit-transform: translateY(-20%);
+	}
+	
+	
+    100% {
+        
+        -webkit-transform: translateY(0%);
+    } 
+}
+
+@-moz-keyframes moving {
+    0% {
+    
+        -moz-transform: translateY(0%);
+    } 
+	
+	50% {
+		-moz-transform: translateY(-20%);
+	}
+	
+	
+    100% {
+        
+        -moz-transform: translateY(0%);
+    } 
+}
+
+@-o-keyframes moving {
+    0% {
+    
+        -o-transform: translateY(0%);
+    } 
+	
+	50% {
+		-o-transform: translateY(-20%);
+	}
+	
+	
+    100% {
+        
+        -o-transform: translateY(0%);
+    } 
+}
+
 @media(max-width:767px) {
+
+    .navbar-nav li a {
+		font-size:14px;
+    }
+	
     .intro-message {
         padding-bottom: 15%;
     }
@@ -383,4 +514,9 @@ footer {
 	}
 	
 	
+
+	
 }
+
+
+
